# html2pdf

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile.alpine-static
src/: cli.cpp  cli.h  exit_codes.h  html_container.cpp  html_container.h  main.cpp  renderer.cpp  renderer.h  resource_loader.cpp  resource_loader.h  web_font_manager.cpp  web_font_manager.h
tests/: run_tests.sh
tests/fixtures/: datauri.html  paged.html  simple.html  style.css  tall.html  unicode.html  wide_table.html  with_css.html
tests/fixtures/baseref/: page.html
tests/fixtures/sub/: index.html
tests/fixtures/sub/assets/: nested.css  sheet.css
tests/fixtures/trav/doc/: escape.html  inside.css  inside.html
tests/fixtures/webfont/: fixture.ttf.b64  fixture.woff2.b64
